Remove nagivation menu.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <header id="header">
             <!--MAIN NAVIGATION-->
             <!--MOBILE-->
-            <nav id="mobile-navigation" data-content-field="navigation-mobileNav">
+            <!-- <nav id="mobile-navigation" data-content-field="navigation-mobileNav">
                 <span id="mobile-navigation-label"></span>
                 <ul>
                     <li class=""><a href="http://blog.ppy.sh/" target="_blank">
@@ -69,8 +69,8 @@
                             upppy
                         </a></li>
                 </ul>
-            </nav>
-            <nav id="main-navigation" data-content-field="navigation-mainNav">
+            </nav> -->
+            <!-- <nav id="main-navigation" data-content-field="navigation-mainNav">
                 <ul class="cf">
                     <li class=""><a href="http://blog.ppy.sh/" target="_blank">
                             dev blog
@@ -88,7 +88,7 @@
                             upppy
                         </a></li>
                 </ul>
-            </nav>
+            </nav> -->
             <nav class="social social-links sqs-svg-icon--list" data-content-field="connected-accounts">
                 <ul>
                     <li><a href="mailto:contact@muazamkamal.com" target="_blank" class="sqs-svg-icon--wrapper email">
