Updated site tagline.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </header>
         <!--SITE TITLE OR LOGO-->
         <div id="innerWrapper">
-            <div id="title-area" class="show" style="margin-top: -435px;">
+            <div id="title-area" class="show" style="margin-top: -480px;">
                 <h1 class="site-title" data-content-field="site-title" data-shrink-original-size="120">
                     <a href="https://splash.muazamkamal.com/">
                         <img class="site-title-image" src="assets/chibi.png" alt="muazam-chibi">
@@ -153,7 +153,8 @@
                 </h1>
                 <p class="site-tagline" data-shrink-original-size="24" style="letter-spacing: 0.416667em;">
                     ⌨🎧🎮🎬 <br>
-                    ニニ | enthusiast.
+                    ニニ <br>
+                    enthusiast.
                 </p>
                 <!--SITE contact info-->
                 <div class="contact-info">
