--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <base href=".">
     <title>Muazam Kamal</title>
-    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="canonical" href="https://splash.muazamkamal.com/">
     <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
     <meta property="og:site_name" content="Muazam Kamal">
