Added SEO description and og tags.

--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
     <meta property="og:title" content="Muazam Kamal">
     <meta property="og:url" content="https://splash.muazamkamal.com/">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/nini.png">
+    <meta property="og:image" content="assets/chibi.png">
+    <meta property="og:description" content="ニニ | enthusiast. ⌨🎧🎮🎬"
     <meta property="og:image:width" content="1500">
     <meta property="og:image:height" content="1500">
     <meta itemprop="name" content="Muazam Kamal">
     <meta itemprop="url" content="https://splash.muazamkamal.com/">
-    <meta itemprop="thumbnailUrl" content="assets/nini.png">
-    <link rel="image_src" href="assets/nini.png">
-    <meta itemprop="image" content="assets/nini.png">
-    <meta name="description" content="">
+    <meta itemprop="thumbnailUrl" content="assets/chibi.png">
+    <link rel="image_src" href="assets/chibi.png">
+    <meta itemprop="image" content="assets/chibi.png">
+    <meta name="description" content="ニニ | enthusiast. ⌨🎧🎮🎬">
     <link rel="stylesheet" type="text/css" href="assets/css">
     <script crossorigin="anonymous" src="assets/common-164af2692d023db89d4c-min.en-US.js"></script>
     <script crossorigin="anonymous" src="assets/performance-c647dc15634a6db3a1fd-min.en-US.js" defer=""></script>
@@ -33,7 +34,7 @@
     <script
         type="application/ld+json">{"url":"https:splash.muazamkamal.com","name":"Muazam Kamal","description":"","image":"assets/nini.png","@context":"http://schema.org","@type":"WebSite"}</script>
     <script
-        type="application/ld+json">{"legalName":"Muazam Kamal","address":"","email":"contact@muazamkamal.com","telephone":"","sameAs":["mailto:contact@muazamkamal.com","https://twitter.com/muazamkamal","http://instagram.com/muazamkamal","https://www.youtube.com/channel/UCfFstf5a-EbrCZsaBHj_b7A","http://twitch.tv/muazamkamal","https://github.com/muazamkamal"],"@context":"http://schema.org","@type":"Organization"}</script>
+        type="application/ld+json">{"legalName":"Muazam Kamal","address":"","email":"contact@muazamkamal.com","telephone":"","sameAs":["mailto:contact@muazamkamal.com","https://twitter.com/muazamkamal","http://instagram.com/muazamkamal","https://www.youtube.com/channel/UCfFstf5a-EbrCZsaBHj_b7A","https://twitch.tv/muazamkamal","https://github.com/muazamkamal"],"@context":"http://schema.org","@type":"Organization"}</script>
     <script
         type="application/ld+json">{"address":"","image":"assets/nini.png","name":"Muazam Kamal","@context":"http://schema.org","@type":"LocalBusiness"}</script>
     <link rel="stylesheet" type="text/css" href="assets/site.css">
@@ -107,7 +108,7 @@
                                 </svg>
                             </div>
                         </a></li>
-                    <li><a href="http://instagram.com/muazamkamal" target="_blank" class="sqs-svg-icon--wrapper instagram">
+                    <li><a href="https://instagram.com/muazamkamal" target="_blank" class="sqs-svg-icon--wrapper instagram">
                             <div>
                                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
                                     <use class="sqs-use--icon" xlink:href="#instagram-icon"></use>
@@ -124,7 +125,7 @@
                                 </svg>
                             </div>
                         </a></li>
-                    <li><a href="http://twitch.tv/muazamkamal" target="_blank" class="sqs-svg-icon--wrapper twitch">
+                    <li><a href="https://twitch.tv/muazamkamal" target="_blank" class="sqs-svg-icon--wrapper twitch">
                             <div>
                                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
                                     <use class="sqs-use--icon" xlink:href="#twitch-icon"></use>
@@ -152,8 +153,7 @@
                     </a>
                 </h1>
                 <p class="site-tagline" data-shrink-original-size="24" style="letter-spacing: 0.416667em;">
-                    ニニ <br>
-                    ⌨🎧🎮🎬 <br>
+                    ⌨🎧🎮🎬<br>
                     enthusiast.
                 </p>
                 <!--SITE contact info-->
@@ -177,8 +177,6 @@
                             <div class="sqs-block html-block sqs-block-html" data-block-type="2"
                                 id="block-yui_3_17_2_1_1406756587384_36523">
                                 <div class="sqs-block-content">
-                                    <h1 class="text-align-center" data-shrink-original-size="26"
-                                        style="letter-spacing: 0.0384615em;">Aubrey + Paul</h1>
                                 </div>
                             </div>
                         </div>
@@ -188,7 +186,7 @@
             <!--INJECTION POINT FOR TRACKING SCRIPTS AND USER CONTENT FROM THE CODE INJECTION TAB-->
             <script type="text/javascript"
                 data-sqs-type="imageloader-bootstrapper">(function () { if (window.ImageLoader) { window.ImageLoader.bootstrap({}, document); } })();</script>
-            <script>Squarespace.afterBodyLoad(Y);</script><svg xmlns="http://www.w3.org/2000/svg" version="1.1"
+            <script>Squarespace.afterBodyLoad(Y);</script><svg xmlns="https://www.w3.org/2000/svg" version="1.1"
                 style="display:none">
                 <symbol id="email-icon" viewBox="0 0 64 64">
                     <path d="M17,22v20h30V22H17z M41.1,25L32,32.1L22.9,25H41.1z M20,39V26.6l12,9.3l12-9.3V39H20z">
