Updated description meta tag

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta itemprop="thumbnailUrl" content="assets/chibi.png">
     <link rel="image_src" href="assets/chibi.png">
     <meta itemprop="image" content="assets/chibi.png">
-    <meta name="description" content="ニニ | enthusiast. ⌨🎧🎮🎬">
+    <meta name="description" content="Why need a full website when you can only have a basic splash screen. ニニ | enthusiast. ⌨🎧🎮🎬">
     <link rel="stylesheet" type="text/css" href="assets/css">
     <script crossorigin="anonymous" src="assets/common-164af2692d023db89d4c-min.en-US.js"></script>
     <script crossorigin="anonymous" src="assets/performance-c647dc15634a6db3a1fd-min.en-US.js" defer=""></script>
