Added Twitter card

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <meta property="og:description" content="Why need a full website when you can only have a basic splash screen. ニニ | enthusiast. ⌨🎧🎮🎬">
     <meta property="og:image:width" content="1500">
     <meta property="og:image:height" content="1500">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@muazamkamal" />
+    <meta name="twitter:creator" content="@muazamkamal" />
     <meta itemprop="name" content="Muazam Kamal">
     <meta itemprop="url" content="https://splash.muazamkamal.com/">
     <meta itemprop="thumbnailUrl" content="https://splash.muazamkamal.com/assets/chibi.png">
