--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <base href=".">
     <title>Muazam Kamal</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link rel="canonical" href="https://splash.muazamkamal.com/">
+    <link rel="canonical" href="https://muazamkamal.com/">
     <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
     <meta property="og:site_name" content="Muazam Kamal">
     <meta property="og:title" content="Muazam Kamal">
-    <meta property="og:url" content="https://splash.muazamkamal.com/">
+    <meta property="og:url" content="https://muazamkamal.com/">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://splash.muazamkamal.com/assets/chibi.png">
+    <meta property="og:image" content="https://muazamkamal.com/assets/chibi.png">
     <meta property="og:description" content="Why need a full website when you can only have a basic splash screen. ニニ | enthusiast. ⌨🎧🎮🎬">
     <meta property="og:image:width" content="1500">
     <meta property="og:image:height" content="1500">
@@ -24,8 +24,8 @@
     <meta name="twitter:site" content="@muazamkamal" />
     <meta name="twitter:creator" content="@muazamkamal" />
     <meta itemprop="name" content="Muazam Kamal">
-    <meta itemprop="url" content="https://splash.muazamkamal.com/">
-    <meta itemprop="thumbnailUrl" content="https://splash.muazamkamal.com/assets/chibi.png">
+    <meta itemprop="url" content="https://muazamkamal.com/">
+    <meta itemprop="thumbnailUrl" content="https://muazamkamal.com/assets/chibi.png">
     <link rel="image_src" href="assets/chibi.png">
     <meta itemprop="image" content="assets/chibi.png">
     <meta name="description" content="Why need a full website when you can only have a basic splash screen. ニニ | enthusiast. ⌨🎧🎮🎬">
@@ -146,7 +146,7 @@
         <div id="innerWrapper">
             <div id="title-area" class="show" style="margin-top: -480px;">
                 <h1 class="site-title" data-content-field="site-title" data-shrink-original-size="120">
-                    <a href="https://splash.muazamkamal.com/">
+                    <a href="https://muazamkamal.com/">
                         <img class="site-title-image" src="assets/chibi.png" alt="muazam-chibi">
                     </a>
                 </h1>
